visit link added

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <h1> <em>Rajiv Gupta- </em>The Name you can trust Upon </h1>
         <br>
         <br>
-        <button type="button" class="btn btn-dark btn-lg"><i class="far fa-building"></i>  Visit   Us  </button>
+        <button type="button" class="btn btn-dark btn-lg"><i class="far fa-building"></i>  <a href="#footer">Visit   Us </a> </button>
         <!-- <button type="button">Download</button> -->
       </div>
     
